--- a/src/index.css
+++ b/src/index.css
@@ -31,8 +31,9 @@ htl {
 body {
   overflow-x: hidden;
   width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
   overflow-y: auto;
+ 
   margin: 0;
   margin-bottom: 2em;
   -webkit-font-smoothing: antialiased;
